projects/compiler/test/typechecker/typedecl/error_duplicate_type_type.out
Error at %FILE_NAME%:2:6
Duplicate name 'Foo'
  |  type Foo { b: String }
          ^
This name is also declared at (1:6)
  |  type Foo { a: Int }
          ^
