projects/compiler/test/typechecker/typedecl/error_duplicate_type_type.abra
type Foo { a: Int }
type Foo { b: String }